--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,36 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
+
+/*Pantalla de carga */
+
+#loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+#loading img {
+    border-radius: 50%;
+    width: 100px; /* Ajusta el tamaño según sea necesario */
+    animation: scale 1.5s ease-in-out infinite;
+}
+
+@keyframes scale {
+    0%, 100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+}
 .header {
     width: 100%;
     height: 60px;
